<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cloud Emoticon</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="copied">Copied to clipboard</string>
    <string name="bad_conn">Bad connection, please retry</string>
    <string name="fail" translatable="false">ლ(╹◡╹ლ)</string>
    <string name="empty" translatable="false">╮(￣▽￣&quot;)╭</string>
    <string name="touch_to_launch">Touch to launch</string>
    <string name="title_activity_settings">Settings</string>
    <string name="behaviors">Behavior</string>
    <string name="close_after_copy">Close after copy</string>
    <string name="repo_url">Repository URL</string>
    <string name="about">About</string>
    <string name="github_repo">GitHub repository</string>
    <string name="github_release">GitHub release</string>
    <string name="version">Version</string>
    <string name="fav">Bookmarks</string>
    <string name="add_to_fav">Add to bookmarks</string>
    <string name="ui">UI</string>
    <string name="added_to_fav">Added to bookmarks</string>
    <string name="removed_from_fav">Removed from bookmarks</string>
    <string name="notification_visibility">Notification visibility</string>
    <string name="show_after_boot_up">Show notification after boot-up</string>
    <string name="emoticon">Emoticon</string>
    <string name="description">Description</string>
    <string name="edit_repository">Edit Repository</string>
    <string name="version_code">Version code</string>
    <string name="no_repo_prompt">You don\'t have any repository</string>
    <string name="repo_manager">Repository Manager</string>
    <string name="add_repo">Add repository</string>
    <string name="alias">Alias</string>
    <string name="invalid_repo_format">Invalid repository format</string>
    <string name="source">Source</string>
    <string name="history">History</string>
    <string name="category">Category</string>
    <string name="downloading">Downloading</string>
    <string name="downloaded">Downloaded</string>
    <string name="duplicate_url">Duplicate URL</string>
    <string name="duplicate_emoticon">Duplicate emoticon</string>
    <string name="navbar_gesture_title">Navigation bar gesture</string>
    <string name="navbar_gesture_summary">Swipe-up from the navigation bar to start</string>
    <string name="no_favorite_prompt">You don\'t have any bookmarks</string>
    <string name="no_history_prompt">You don\'t have any history</string>
    <string name="edit_favorite">Edit Bookmark</string>
    <string name="remove_all_history">Remove all history</string>
    <string name="backup_and_restore">Backup and restore</string>
    <string name="backup_favorites">Backup bookmarks</string>
    <string name="restore_favorites">Restore bookmarks</string>
    <string name="empty_emoticon">Empty emoticon</string>
    <string name="account">Account</string>
    <string name="registering">Registering</string>
    <string name="register_successful">You have registered</string>
    <string name="existing_username">Existing username</string>
    <string name="illegal_email_address">Illegal email</string>
    <string name="existing_email_address">Existing email address</string>
    <string name="repository_store">Repository Store</string>
    <string name="old_favorites_merged">Old bookmarks merged</string>
    <string name="update_checker">Check for update</string>
    <string name="update_checker_failed">Failed to check for update</string>
    <string name="already_latest_version">Already latest version</string>
    <string name="new_version_available">New version is available!</string>
    <string name="go_to_play_store">Go to Play Store</string>
    <string name="built_in_emoji">Built-in emoji</string>
    <string name="search_hint">Search emoticon</string>
    <string name="search_result_not_found">Result not found</string>

    <string-array name="notification_options">
        <item>Don\'t show</item>
        <item>Only in notification panel(Only works above Android 3.0)</item>
        <item>Both in notification panel and status bar</item>
    </string-array>
    <string name="ime">User dictionary</string>
    <string name="import_into_ime">Import all bookmarks into user dictionary</string>
    <string name="revoke_from_ime">Revoke all bookmarks from user dictionary</string>
    <string name="imported_into_ime">Imported %d bookmarks into user dictionary</string>
    <string name="revoked_from_ime">Revoked %d bookmarks from user dictionary</string>
    <string name="import_into_ime_summary">Only works for shortcut in English letters</string>
    <string name="no_description">No description</string>
    <string name="no_shortcut">No shortcut</string>
    <string name="shortcut">Shortcut</string>
    <string name="repositories">Repositories</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="empty_username">Empty username</string>
    <string name="empty_password">Empty password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_out">Log out</string>
    <string name="logging_in">Logging in</string>
    <string name="logging_out">Logging out</string>
    <string name="cloudemoji_input_method">CloudEmoji Input Method</string>
</resources>